# tahto-pap2

./: .env  .gitignore  Dockerfile  README.md  pyproject.toml
app/: action_manager.py  authentication.py  browser.py  data_processing.py  main.py  monitor_falhas.py  schedule_regular.py  send_telegram_msg.py
data/: relatorio.csv
